...
              <View className="items-center gap-2 pt-5">
                <IconButton
                  icon={Plus}
                  onPress={() => router.push("/workout/create")}
                />
                <Text className="text-base font-medium text-gray-200">
                  Novo treino
                </Text>
              </View>
            )}
          </View>
        </ScrollView>
      )}
...
